--- a/webservice/requirements.txt
+++ b/webservice/requirements.txt
@@ -2,11 +2,13 @@ aniso8601==8.0.0
 autopep8==1.4.4
 Click==7.0
 Flask==1.1.1
+Flask-Cors==3.0.8
 Flask-RESTful==0.3.7
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 pycodestyle==2.5.0
+PyMySQL==0.9.3
 pytz==2019.3
 six==1.12.0
 SQLAlchemy==1.3.10
