--- a/webservice/requirements.txt
+++ b/webservice/requirements.txt
@@ -14,4 +14,24 @@ six==1.12.0
 SQLAlchemy==1.3.10
 Werkzeug==0.16.0
 gevent
-gunicorn
+gunicornaniso8601==8.0.0
+autopep8==1.4.4
+cffi==1.13.1
+Click==7.0
+cryptography==2.8
+Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-RESTful==0.3.7
+gevent==1.4.0
+greenlet==0.4.15
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+pycodestyle==2.5.0
+pycparser==2.19
+PyMySQL==0.9.3
+pytz==2019.3
+six==1.12.0
+SQLAlchemy==1.3.10
+Werkzeug==0.16.0
