--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -14,6 +14,7 @@ MarkupSafe==1.1.1
 pycodestyle==2.5.0
 pycparser==2.19
 PyMySQL==0.9.3
+python-dateutil==2.8.1
 pytz==2019.3
 six==1.12.0
 SQLAlchemy==1.3.10
